--- a/my website/images.html
+++ b/my website/images.html
@@ -32,5 +32,9 @@
 	<img src="pictures/tenor.gif" alt="tenor">
 	<img src="pictures/vietnam.png" alt="vietnam" style="width:790px;height:460px;">
 	<hr>
+	<hr>
+	<hr>
+	<hr>
+	<p><font color="white">Nothing else to see here</font></p>
 </body>
 </html>
