--- a/my website/index.html
+++ b/my website/index.html
@@ -2,6 +2,7 @@
 <!-- Brendan McCourt : Sept 4, 2019 -->
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="style.css">
 	<title>Ari</title>
 	<meta charset="utf-8">
 </head>
