--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,2 +1,22 @@
 <!DOCTYPE html>
 <!-- Brendan McCourt -->
+<html lang="en">
+<head>
+	<link rel="stylesheet" href="css/styles.css">
+	<meta charset="utf-8">
+</head>
+<body>
+	<header>
+		<a href="index.html"><img src="" alt=""></a>
+	</header>
+
+	<nav>
+		<ul>
+			<li><a href="index.html">Main</a></li>
+			<li><a href="family.html">Family</a></li>
+			<li><a href="interests.html">Interests</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+</body>
+</html>
