--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -18,5 +18,12 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
+
+	<main>
+		<h1>Contact Info</h1>
+		<p>Email: bcmccourt202@gmail.com</p>
+		<p>Discord: Ari#2464</p>
+	</main>
+
 </body>
 </html>
