--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,5 +18,108 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<!--Start of 3 paragraphs about me-->
+	<main>
+		<h2>About Me</h2>
+		<p>My name is Brendan McCourt, and I am a student at the State Technical College of Missouri</p>
+
+		<br>
+		<hr>
+		<br>
+		<!-- Schedule; only appears on mobile and tablet -->
+		<div class="mobile">
+			<h3>Shedule for the Week</h3>
+			<p>8-9AM Physics on MWF</p>
+			<p>8-10AM Physics Lab on Th</p>
+			<p>10AM-12PM Windows Server All Week</p>
+			<p>1-2PM Scaling Networks All Week</p>
+			<p>2-3PM HTML All Week</p>
+		</div>
+
+		<!-- About me table; only appears on desktop -->
+		<table class="schedule">
+			<caption>Schedule for an average week</caption>
+			<tr>
+				<th>&nbsp;</th>
+				<th>Sunday</th>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+			</tr>
+			<tr>
+				<td>8-9AM</td>
+				<td>OFF</td>
+				<td>Physics</td>
+				<td>Physics Lab</td>
+				<td>Physics</td>
+				<td>OFF</td>
+				<td>Physics</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>9-10AM</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>Physics Lab</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>10-11AM</td>
+				<td>OFF</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>11AM-12PM</td>
+				<td>OFF</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>Windows Server</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>12-1PM</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>1-2PM</td>
+				<td>OFF</td>
+				<td>Scaling Networks</td>
+				<td>Scaling Networks</td>
+				<td>Scaling Networks</td>
+				<td>Scaling Networks</td>
+				<td>Scaling Networks</td>
+				<td>OFF</td>
+			</tr>
+			<tr>
+				<td>2-3PM</td>
+				<td>OFF</td>
+				<td>HTML</td>
+				<td>HTML</td>
+				<td>HTML</td>
+				<td>HTML</td>
+				<td>HTML</td>
+				<td>OFF</td>
+			</tr>
+		</table>
+	</main>
 </body>
 </html>
