--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="" alt=""></a>
+		<a href="index.html"><img src="images/Rimuru-Salt.png" alt="salt"></a>
 	</header>
 
 	<nav>
