--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="" alt=""></a>
+		<a href="index.html"><img src="images/Rimuru-Salt.png" alt="salt"></a>
 	</header>
 
 	<nav>
@@ -21,8 +21,8 @@
 	<!--Start of 3 paragraphs about me-->
 	<main>
 		<h2>About Me</h2>
-		<p>My name is Brendan McCourt, and I am a student at the State Technical College of Missouri</p>
-
+		<p>My name is Brendan McCourt, and I am a student at the State Technical College of Missouri. I am currently enroller in Networking Systems Technology program and plan on most likely going to a job as an IT helpdesk.</p>
+		<p>I was raised in a small town called New London in Missouri. I graduated in 2018 at Mark Twain High School in Center, Missouri. During that time I always had a great interest in computers and gaming. It came down to choosing programming to make games and computer repair, and in the end I chose NST since I enjoyed handling computer repairs and working as an IT helpdesk more than programming which I still do in my offtime, but it's not my prefered job to do.</p>
 		<br>
 		<hr>
 		<br>
@@ -121,5 +121,9 @@
 			</tr>
 		</table>
 	</main>
+	<footer>
+		<p>Website Created by Brendan McCourt</p>
+		<a href="memes.html" class="hidden">secret meme page</a>
+	</footer>
 </body>
 </html>
