--- a/midterm/interests.html
+++ b/midterm/interests.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="" alt=""></a>
+		<a href="index.html"><img src="images/Rimuru-Salt.png" alt="salt"></a>
 	</header>
 
 	<nav>
@@ -18,5 +18,31 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<h1>My Interests</h1>
+
+	<article>
+		<h4>My Program : Networking Systems Technology (NST)</h4>
+		<img src="images/cisco.png" alt="networking" class="desktop">
+		<p>My program at Missouri State Tech is Networking Systems Technology, a program all about computers and computer networks. In this program it is a lot of information on how to set up computer networks, with a lot of the equipment we work on being Cisco based. It has been what I was hoping for so far.</p>
+		<aside>I got my first computer at the age of 15, it was an old one that I had to do a few repairs on from time to time, and that is where I got my interest in computers and fixing them.</aside>
+	</article>
+
+	<article>
+		<h4>Hobby : Gaming</h4>
+		<img src="images" alt="gaming" class="desktop">
+		<p>One of my favorite things to do in my off time is gaming. I use it as an outlit for my creativity, making characters and writing a backstory, and then setting off in whatever game it is at the time.</p>
+		<p>I started on an PS2 when I was 6 years old, and it is still my favorite console to this day. Though nowadays I have moved more towards computer games, with a Nintendo switch for my offtime</p>
+		<img src="images/switch.png" alt="switch" class="desktop" style="width:260px;height:180px;">
+	</article>
+
+	<article>
+		<h4>Favorite Game : </h4>
+		<img src="images" alt="favorite" class="desktop">
+		<p>My favorite game is</p>
+	</article>
+
+	<article>
+		<h4>Random</h4>
+	</article>
 </body>
 </html>
