--- a/midterm/memes.html
+++ b/midterm/memes.html
@@ -2,7 +2,7 @@
 <!-- Brendan McCourt -->
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles-memes.css">
 	<meta charset="utf-8">
 </head>
 <body>
@@ -13,8 +13,12 @@
 	<h1>Secret Page of Memes and Random Stuff</h1>
 	<h3>Press The Arrow Up Top To Return</h3>
 
-	<img src="images/Linux-Coffee.gif" alt="coffee">
-	<img src="images/vietnam.png" alt="vietnam">
+	<main>
+
+		<img src="images/Linux-Coffee.gif" alt="coffee">
+		<img src="images/vietnam.png" alt="vietnam">
+
+	</main>
 
 	<main>
 	</main>
