--- a/midterm/memes.html
+++ b/midterm/memes.html
@@ -15,12 +15,12 @@
 
 	<main>
 
-		<img src="images/Linux-Coffee.gif" alt="coffee">
-		<img src="images/vietnam.png" alt="vietnam">
+		<h1 class="mobile">YOUR SCREEN IS TO SMALL, YOU ARE PROBABLY ON A PHONE AREN'T YOU</h1>
+		<h2 class="mobile">ACCESS IS DENIED</h2>
 
-	</main>
+		<img src="images/Linux-Coffee.gif" alt="coffee" class="desktop">
+		<img src="images/vietnam.png" alt="vietnam" class="desktop">
 
-	<main>
 	</main>
 
 	<footer>
