--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -20,7 +20,52 @@
 	</nav>
 
 	<main>
+		<form>
+			First Name:<br>
+			<input type="text" name="firstname"><br>
+			Last Name:<br>
+			<input type="text" name="lastname"><br>
+			Email:<br>
+			<input type="text" name="email"><br>
+		</form>
+
+		<br><hr><br>
+
+		<form>
+			Would you like to sign up for our newsletter that sometimes comes out?<br>
+			<input type="radio" name="yesno" value="Yes" checked>Yes<br>
+			<input type="radio" name="yesno" value="No" checked>No<br>
+
+			<br><hr><br>
+
+			What are you contacting for today? (Select all that apply) <br>
+			<input type="checkbox" name="problem" value="problem"> Problem with website<br>
+			<input type="checkbox" name="question" value="question"> Question<br>
+			<input type="checkbox" name="other" value="other"> Other Reason<br>
+
+			<br><hr><br>
+
+			How quick is a response needed?<br>
+			<select name="quickness">
+				<option value="not">Not Very Quick</option>
+				<option value="somewhat">Somewhat Quick</option>
+				<option value="very">Very Quick</option>
+			</select> <br>
+
+			<br><hr><br>
+
+			Enter your message here:<br>
+			<textarea name="comment"></textarea>
+			
+			<br><hr><br>
+
+			Please note submitting multiple messages will not get a response faster. <br>
+			<input type="submit" value="submit"><input type="reset" value="reset">
+		</form>
 	</main>
+
+	<footer>
+	</footer>
 
 </body>
 </html>
