--- a/midterm/family.html
+++ b/midterm/family.html
@@ -21,6 +21,38 @@
 
 	<main>
 		<h1>My Family</h1>
+		<article class="left">
+			<h4>My Mom</h4>
+			<img src="images/christina-tobias.jpg" alt="mom" class="desktop">
+			<p>Name: Christina McCourt</p>
+			<p>Birthday: </p>
+			<p>Relationship: Mom</p>
+			<p>Occupation: Tutor at Mark Twain Elementary School</p>
+		</article>
+		<article class="left">
+			<h4>My Dad</h4>
+			<img src="images/shawn.jpg" alt="dad" class="desktop">
+			<p>Name: Shawn McCourt</p>
+			<p>Birthday: </p>
+			<p>Relationship: Dad</p>
+			<p>Occupation: Supervisor of Packaging at J.M Huber in Quincy IL</p>
+		</article>
+		<article class="right">
+			<h4>My Dog</h4>
+			<img src="images/nigel.jpeg" alt="dog" class="desktop">
+			<p>Name: Nigel</p>
+			<p>Birthday: Unknown</p>
+			<p>Relationship: My Dog</p>
+			<p>Occupation: Dog Stuff</p>
+		</article>
+		<article class="right">
+			<h4>My Big Brother</h4>
+			<img src="images/andrew.jpg" alt="big brother" class="desktop">
+			<p>Name: Andrew McCourt</p>
+			<p>Birthday: </p>
+			<p>Relationship: Brother</p>
+			<p>Occupation: </p>
+		</article>
 	</main>
 
 </body>
