--- a/midterm/family.html
+++ b/midterm/family.html
@@ -25,7 +25,7 @@
 			<h4>My Mom</h4>
 			<img src="images/christina-tobias.jpg" alt="mom" class="desktop">
 			<p>Name: Christina McCourt</p>
-			<p>Birthday: </p>
+			<p>Birthday: 02/25/71</p>
 			<p>Relationship: Mom</p>
 			<p>Occupation: Tutor at Mark Twain Elementary School</p>
 		</article>
@@ -33,7 +33,7 @@
 			<h4>My Dad</h4>
 			<img src="images/shawn.jpg" alt="dad" class="desktop">
 			<p>Name: Shawn McCourt</p>
-			<p>Birthday: </p>
+			<p>Birthday: 04/17/72</p>
 			<p>Relationship: Dad</p>
 			<p>Occupation: Supervisor of Packaging at J.M Huber in Quincy IL</p>
 		</article>
@@ -49,7 +49,7 @@
 			<h4>My Big Brother</h4>
 			<img src="images/andrew.jpg" alt="big brother" class="desktop">
 			<p>Name: Andrew McCourt</p>
-			<p>Birthday: </p>
+			<p>Birthday: 06/27/90</p>
 			<p>Relationship: Brother</p>
 			<p>Occupation: </p>
 		</article>
