--- a/midterm/index.html
+++ b/midterm/index.html
@@ -123,7 +123,7 @@
 	</main>
 	<footer>
 		<p>Website Created by Brendan McCourt</p>
-		<a href="memes.html" class="hidden">secret meme page</a>
+		<a href="memes.html" class="hidden">HILLEN</a>
 	</footer>
 </body>
 </html>
