--- a/midterm/memes.html
+++ b/midterm/memes.html
@@ -8,15 +8,17 @@
 <body>
 	<header>
 		<a href="index.html"><img src="images/back.png" alt="back"></a>
+		<h1>Secret Page of Memes and Random Stuff</h1>
+		<h3>Press The Arrow Up Top To Return</h3>
 	</header>
-
-	<h1>Secret Page of Memes and Random Stuff</h1>
-	<h3>Press The Arrow Up Top To Return</h3>
 
 	<main>
 
-		<h1 class="mobile">YOUR SCREEN IS TO SMALL, YOU ARE PROBABLY ON A PHONE AREN'T YOU</h1>
-		<h2 class="mobile">ACCESS IS DENIED</h2>
+		<h1 class="mobile">YOUR SCREEN IS TO SMALL, YOU ARE PROBABLY ON A PHONE AREN'T YOU</h1><hr class="mobile">
+		<h2 class="mobile">ACCESS IS DENIED</h2><hr class="mobile">
+		<h3 class="mobile">HERE IS A PICTURE OF LORD HILLEN INSTEAD</h3>
+		
+		<img src="images/hillen.jpg" alt="our lord" class="mobile">
 
 		<img src="images/Linux-Coffee.gif" alt="coffee" class="desktop">
 		<img src="images/vietnam.png" alt="vietnam" class="desktop">
