--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -18,6 +18,7 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<hr>
 
 	<main>
 		<form>
@@ -62,9 +63,11 @@
 			Please note submitting multiple messages will not get a response faster. <br>
 			<input type="submit" value="submit"><input type="reset" value="reset">
 		</form>
+		<hr>
 	</main>
 
 	<footer>
+		<p>Website Created by Brendan McCourt</p>
 	</footer>
 
 </body>
