--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,9 +20,11 @@
 	</nav>
 	<!--Start of 3 paragraphs about me-->
 	<main>
-		<h2>About Me</h2>
-		<p>My name is Brendan McCourt, and I am a student at the State Technical College of Missouri. I am currently enroller in Networking Systems Technology program and plan on most likely going to a job as an IT helpdesk.</p>
-		<p>I was raised in a small town called New London in Missouri. I graduated in 2018 at Mark Twain High School in Center, Missouri. During that time I always had a great interest in computers and gaming. It came down to choosing programming to make games and computer repair, and in the end I chose NST since I enjoyed handling computer repairs and working as an IT helpdesk more than programming which I still do in my offtime, but it's not my prefered job to do.</p>
+		<article class="center">
+			<h2>About Me</h2>
+			<p>My name is Brendan McCourt, and I am a student at the State Technical College of Missouri. I am currently enroller in Networking Systems Technology program and plan on most likely going to a job as an IT helpdesk.</p>
+			<p>I was raised in a small town called New London in Missouri. I graduated in 2018 at Mark Twain High School in Center, Missouri. During that time I always had a great interest in computers and gaming. It came down to choosing programming to make games and computer repair, and in the end I chose NST since I enjoyed handling computer repairs and working as an IT helpdesk more than programming which I still do in my offtime, but it's not my prefered job to do.</p>
+		</article>
 		<br>
 		<hr>
 		<br>
@@ -40,7 +42,7 @@
 		<table class="schedule">
 			<caption>Schedule for an average week</caption>
 			<tr>
-				<th>&nbsp;</th>
+				<th>Hours</th>
 				<th>Sunday</th>
 				<th>Monday</th>
 				<th>Tuesday</th>
