--- a/midterm/family.html
+++ b/midterm/family.html
@@ -53,7 +53,11 @@
 			<p>Relationship: Brother</p>
 			<p>Occupation: </p>
 		</article>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</main>
-
+	<footer>
+		<p>Website Created by Brendan McCourt</p>
+		<a href="memes.html" class="hidden">HILLEN</a>
+	</footer>
 </body>
 </html>
