--- a/midterm/interests.html
+++ b/midterm/interests.html
@@ -35,15 +35,16 @@
 		<img src="images/switch.png" alt="switch" class="desktop" style="width:260px;height:180px;">
 	</article>
 
-	<article class="left">
+	<article class="right">
 		<h4>Favorite Game : God Eater 3</h4>
 		<img src="images/god-eater-3.png" alt="favorite" class="desktop">
 		<p>My favorite game is God Eater 3</p>
 		<p>It is a action role playing game where the goal is to kill giant monsters known as Aragami, it takes place in a future were humanity was nearly wipred out by said Aragami and live in small cities spread across the world run my Fenrir. The main plot is the fight against the Aragami and the Ashlands that are expanding to take more of the planet. The Ashland is a deadly area that slowly expands and is toxic for anyone to live in. The game has you trying to survive and gain your freedom, since you are not only a God Eater, you are an Adaptive God Eaterm, or AGE for short, which in the eyes of most means you are less than human.</p>
 	</article>
 	<article class="right">
-		<h4>Random</h4>
-		<p></p>
+		<h4>Music : Rock/Soft Metal</h4>
+		<img src="images/rise-against.png" alt="rise" class="desktop" style="width:250px;height:250px;">
+		<p>My interest in music is more towards the heavier rock and softer metal. I like to be able to understand the artist and it has a nice beat to it most of the time.</p>
 	</article>
 </body>
 </html>
