--- a/midterm/family.html
+++ b/midterm/family.html
@@ -28,6 +28,7 @@
 			<p>Birthday: 02/25/71</p>
 			<p>Relationship: Mom</p>
 			<p>Occupation: Tutor at Mark Twain Elementary School</p>
+			<p>Interesting Fact: Makes quilts.</p>
 		</article>
 		<article class="left">
 			<h4>My Dad</h4>
@@ -36,6 +37,7 @@
 			<p>Birthday: 04/17/72</p>
 			<p>Relationship: Dad</p>
 			<p>Occupation: Supervisor of Packaging at J.M Huber in Quincy IL</p>
+			<p>Interesting Fact: Is a volunteer firefighter.</p>
 		</article>
 		<article class="right">
 			<h4>My Dog</h4>
@@ -44,6 +46,7 @@
 			<p>Birthday: Unknown</p>
 			<p>Relationship: My Dog</p>
 			<p>Occupation: Dog Stuff</p>
+			<p>Interesting Fact: The longer I stay away at college the less excited he is when I get home.</p>
 		</article>
 		<article class="right">
 			<h4>My Big Brother</h4>
@@ -51,7 +54,8 @@
 			<p>Name: Andrew McCourt</p>
 			<p>Birthday: 06/27/90</p>
 			<p>Relationship: Brother</p>
-			<p>Occupation: </p>
+			<p>Occupation: Makes tools, carbide grinder.</p>
+			<p>Interesting Fact: None</p>
 		</article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</main>
