--- a/library assignment/credit.html
+++ b/library assignment/credit.html
@@ -10,6 +10,7 @@
 		<ul>
 			<li><a href="index.html">Main</a></li>
 			<li><a href="examples.html">Examples</a></li>
+			<li><a href="examples2.html">Examples2</a></li>
 			<li><a href="credit.html">Credits</a></li>
 		</ul>
 	</nav>
@@ -20,6 +21,8 @@
 			<a href="https://www.w3schools.com/css/css_image_gallery.asp">1. W3Schools Image Gallery</a>
 			<br><br>
 			<a href="https://www.w3schools.com/howto/howto_js_tab_img_gallery.asp">2. W3Schools Tab Gallery</a>
+			<br><br>
+			<a href="https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp">3. W3Schools Slideshow Gallery</a>
 			<br><br>
 		</article>
 	</main>
