--- a/library assignment/examples.html
+++ b/library assignment/examples.html
@@ -10,6 +10,7 @@
 		<ul>
 			<li><a href="index.html">Main</a></li>
 			<li><a href="examples.html">Examples</a></li>
+			<li><a href="examples2.html">Examples2</a></li>
 			<li><a href="credit.html">Credits</a></li>
 		</ul>
 	</nav>
@@ -59,6 +60,10 @@
 		  <div id="imgtext"></div>
 		</div> 
 
+		<article>
+			<p>This will move when an image is expanded</p>
+		</article>
+
 		<script>
 			function myFunction(imgs) {
 			var expandImg = document.getElementById("expandedImg");
@@ -68,10 +73,6 @@
 			expandImg.parentElement.style.display = "block";
 			} 
 		</script>
-
-		<article>
-			<p>This will move when an image is expanded</p>
-		</article>
 	</main>
 </body>
 </html>
